demo-web/web-a/web-a/templates/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: telstra-customer-a
  annotations:
    app.kubernetes.io/managed-by: Helm
    meta.helm.sh/release-namespace: telstra-customer-a
